--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "scripts": {},
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "serve": "^14.2.0"
+  }
 }
