adds serve script into package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "password-check-modules-with-cypress",
   "version": "1.0.0",
   "description": "Password Check",
-  "scripts": {},
+  "scripts": {
+    "serve": "serve ./src"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
